[gd_scene load_steps=5 format=3 uid="uid://ccfk85lo0vkbl"]

[ext_resource type="Texture2D" uid="uid://do7qd6yf1qh48" path="res://icon.svg" id="1_hqcup"]
[ext_resource type="Script" path="res://scripts/player_chararcter.gd" id="1_smuk1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfb01"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_wutyt"]
radius = 100.0

[node name="player_chararcter" type="CharacterBody2D"]
script = ExtResource("1_smuk1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hqcup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tfb01")

[node name="AimLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 200, 0)

[node name="PickUpArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_wutyt")

[node name="PickUpPosition" type="Marker2D" parent="."]
position = Vector2(100, 0)

[connection signal="area_entered" from="PickUpArea" to="." method="_on_pick_up_area_area_entered"]
[connection signal="area_exited" from="PickUpArea" to="." method="_on_pick_up_area_area_exited"]
